test/invalid-syntax/64371_unterminated_string/unterminated_string.agu
-- Author: 64371, Ricardo Costa

let str: String = "hello world -- lexical error: unterminated string literal
